test/compile_errors/err_typeinfo_missing_type_arg.w
//! expect-check-fail: TypeInfo.size takes exactly one type argument

type Point { x: i32 }

const BAD = comptime TypeInfo.size()

fn main:
    let _ = BAD
